crates/compiler/semantic/tests/common/snapshots/parameterized__arrays::array_types::test_array_type_declarations.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { let arr: [felt; 5]; return; }
--- Diagnostics ---
[02] Error: found ';' expected '*', or '='
   ╭─[ semantic_tests::arrays::array_types::test_array_type_declarations:1:31 ]
   │
 1 │ fn test() { let arr: [felt; 5]; return; }
   │                               ┬  
   │                               ╰── found ';' expected '*', or '='
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { let arr: [[felt; 3]; 2] = [[1, 2, 3], [4, 5, 6]]; return; }
--- Diagnostics ---
[2008] Error: Nested arrays are not supported yet
   ╭─[ semantic_tests::arrays::array_types::test_array_type_declarations:1:22 ]
   │
 1 │ fn test() { let arr: [[felt; 3]; 2] = [[1, 2, 3], [4, 5, 6]]; return; }
   │                      ───────┬──────  
   │                             ╰──────── Nested arrays are not supported yet
───╯
[2008] Error: Nested arrays are not supported yet
   ╭─[ semantic_tests::arrays::array_types::test_array_type_declarations:1:39 ]
   │
 1 │ fn test() { let arr: [[felt; 3]; 2] = [[1, 2, 3], [4, 5, 6]]; return; }
   │                                       ───────────┬──────────  
   │                                                  ╰──────────── Nested arrays are not supported yet
───╯

============================================================

--- Input 3 (ERROR) ---
fn test() { let n = 5; let arr: [felt; n]; return; }
--- Diagnostics ---
[02] Error: Fixed size arrays must have a size known at compile-time
   ╭─[ semantic_tests::arrays::array_types::test_array_type_declarations:1:41 ]
   │
 1 │ fn test() { let n = 5; let arr: [felt; n]; return; }
   │                                         ┬  
   │                                         ╰── Fixed size arrays must have a size known at compile-time
───╯
