crates/compiler/semantic/tests/common/snapshots/parameterized__expressions::casts::test_casts.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { let x: felt = 10; let y: u32 = x as u32; return; }
--- Diagnostics ---
[2001] Error: Invalid cast from 'felt' to 'u32'. Only u32 to felt casting is currently supported.
   ╭─[ semantic_tests::expressions::casts::test_casts:1:44 ]
   │
 1 │ fn test() { let x: felt = 10; let y: u32 = x as u32; return; }
   │                                            ┬  
   │                                            ╰── Invalid cast from 'felt' to 'u32'. Only u32 to felt casting is currently supported.
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { let x: bool = true; let y: felt = x as felt; return; }
--- Diagnostics ---
[2001] Error: Invalid cast from 'bool' to 'felt'. Only u32 to felt casting is currently supported.
   ╭─[ semantic_tests::expressions::casts::test_casts:1:47 ]
   │
 1 │ fn test() { let x: bool = true; let y: felt = x as felt; return; }
   │                                               ┬  
   │                                               ╰── Invalid cast from 'bool' to 'felt'. Only u32 to felt casting is currently supported.
───╯

============================================================

--- Input 3 (ERROR) ---
fn test() { let x: felt = 10; let y: bool = x as bool; return; }
--- Diagnostics ---
[2001] Error: Invalid cast from 'felt' to 'bool'. Only u32 to felt casting is currently supported.
   ╭─[ semantic_tests::expressions::casts::test_casts:1:45 ]
   │
 1 │ fn test() { let x: felt = 10; let y: bool = x as bool; return; }
   │                                             ┬  
   │                                             ╰── Invalid cast from 'felt' to 'bool'. Only u32 to felt casting is currently supported.
───╯

============================================================

--- Input 4 (ERROR) ---
struct Point { x: felt, y: felt } fn test() { let val = 3; let res = val as Point; return; }
--- Diagnostics ---
[2001] Error: Invalid cast from 'felt' to 'Point'. Only u32 to felt casting is currently supported.
   ╭─[ semantic_tests::expressions::casts::test_casts:1:70 ]
   │
 1 │ struct Point { x: felt, y: felt } fn test() { let val = 3; let res = val as Point; return; }
   │                                                                      ─┬─  
   │                                                                       ╰─── Invalid cast from 'felt' to 'Point'. Only u32 to felt casting is currently supported.
───╯

============================================================

--- Input 5 (ERROR) ---
fn test() { let val = 3; let res = val as (felt, felt); return; }
--- Diagnostics ---
[02] Error: found '(' expected identifier
   ╭─[ semantic_tests::expressions::casts::test_casts:1:43 ]
   │
 1 │ fn test() { let val = 3; let res = val as (felt, felt); return; }
   │                                           ┬  
   │                                           ╰── found '(' expected identifier
───╯

============================================================

--- Input 6 (ERROR) ---
fn test() { let val = 3; let res = val as [felt; 10]; return; }
--- Diagnostics ---
[02] Error: found '[' expected identifier
   ╭─[ semantic_tests::expressions::casts::test_casts:1:43 ]
   │
 1 │ fn test() { let val = 3; let res = val as [felt; 10]; return; }
   │                                           ┬  
   │                                           ╰── found '[' expected identifier
───╯
