crates/compiler/semantic/tests/common/snapshots/parameterized__expressions::new_expr::test_new_expression_semantics.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
assertion_line: 423
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { let p = new Unknown[3]; return; }
--- Diagnostics ---
[1009] Error: Cannot find type 'Unknown' in this scope
   ╭─[ semantic_tests::expressions::new_expr::test_new_expression_semantics:1:25 ]
   │
 1 │ fn test() { let p = new Unknown[3]; return; }
   │                         ───┬───  
   │                            ╰───── Cannot find type 'Unknown' in this scope
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { let p = new felt[true]; return; }
--- Diagnostics ---
[2001] Error: heap count must be numeric (felt or u32), found `bool`
   ╭─[ semantic_tests::expressions::new_expr::test_new_expression_semantics:1:30 ]
   │
 1 │ fn test() { let p = new felt[true]; return; }
   │                              ──┬─  
   │                                ╰─── heap count must be numeric (felt or u32), found `bool`
───╯

============================================================

--- Input 3 (ERROR) ---
fn test() { let p = new u32[Point { x: 1, y: 2 }]; return; }
--- Diagnostics ---
[1009] Error: Cannot find type 'Point' in this scope
   ╭─[ semantic_tests::expressions::new_expr::test_new_expression_semantics:1:29 ]
   │
 1 │ fn test() { let p = new u32[Point { x: 1, y: 2 }]; return; }
   │                             ──┬──  
   │                               ╰──── Cannot find type 'Point' in this scope
───╯

